# fingerd

./: .gitignore  LICENSE  README.md  fingerd.cabal
src/: Debug.hs  Main.hs
