name:                fingerd
version:             0.1.0.0
synopsis:            Simple project template
description:         Please see README.md
homepage:            https://github.com/macalimlim/fingerd#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Angelo Calimlim
maintainer:          macalimlim@gmail.com
copyright:           2019 Michael Angelo Calimlim
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable debug
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Debug.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , network

executable fingerd
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , integer-gmp
                     , network
                     , raw-strings-qq
                     , sqlite-simple
                     , text
